src/test/ui/suggestions/confuse-field-and-method/issue-32128.stderr
error[E0599]: no method named `example` found for type `Example` in the current scope
  --> $DIR/issue-32128.rs:22:10
   |
LL | struct Example {
   | -------------- method `example` not found for this
...
LL |     demo.example(1);
   |          ^^^^^^^ field, not a method
   |
   = help: use `(demo.example)(...)` if you meant to call the function stored in the `example` field

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0599"
